# GenerativeAndAgenticAi

./: README.md  chatbot(ollamaWithLangchain).ipynb  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
1-LangchainBasics/: langchainbasics.ipynb  qachatbot.py
api/: app.py  client.py
chatbot/: app.py  app1.py
rag/: chain.ipynb  simplerag.ipynb
