[project]
name = "generativeandagenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langserve>=0.3.1",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "sse-starlette>=2.4.1",
    "streamlit>=1.47.0",
    "uvicorn>=0.35.0",
]
